Fix code word-break on pages

--- a/resources/sass/main/_custom.scss
+++ b/resources/sass/main/_custom.scss
@@ -9432,6 +9432,9 @@ pre {
     border-radius: 0;
 }
 
+.page-content code {
+    word-break: normal;
+
 .page-content>pre>code {
     border: none;
 }
